--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </svg>
                 </div>
                 <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <p class="features-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="features-list_item">
                 <div class="features-wrapper">
@@ -101,7 +101,7 @@
 
     <!-- What we do -->
 
-    <section>
+    <section class="our-duties">
         <div class="container">
         <h2>What are we doing</h2>
         <ul class="illustrations">
@@ -121,14 +121,14 @@
     <!-- Our team -->
 
     <section class="team">
-        <div class="container">
+        <div class="team-container container">
         <h2>Our Team</h2>
         <ul class="team-list">
             <li class="team-list_item">
                 <img src="./images/programmer-1.jpg" alt="Mark" width="264">
                 <div class="team-description">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-job">Product Designer</p>
                 <ul class="team-links">
                     <li class="team-links_item">
                         <a class="team-link" href="https://instagram.com">
@@ -167,8 +167,8 @@
             <li class="team-list_item">
                 <img src="./images/programmer-2.jpg" alt="Tom" width="264">
                 <div class="team-description">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-job">Frontend Developer</p>
                 <ul class="team-links">
                     <li class="team-links_item">
                         <a class="team-link" href="https://instagram.com">
@@ -207,8 +207,8 @@
             <li class="team-list_item">
                 <img src="./images/programmer-3.jpg" alt="Camilla" width="264">
                 <div class="team-description">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-job">Marketing</p>
                 <ul class="team-links">
                     <li class="team-links_item">
                         <a class="team-link" href="https://instagram.com">
@@ -247,8 +247,8 @@
             <li class="team-list_item">
                 <img src="./images/programmer-4.jpg" alt="Daniel" width="264">
                 <div class="team-description">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-job">UI Designer</p>
                 <ul class="team-links">
                     <li class="team-links_item">
                         <a class="team-link" href="https://instagram.com">
@@ -296,42 +296,42 @@
         <ul class="customer-list">
             <li class="customer-list_item">
                 <a class="customer-list_link" href="#">
-                    <svg class="customer-list_icon" width="104" height="56">
+                    <svg class="customer-list_icon" width="110" height="56">
                         <use href="./images/icons.svg#icon-Logo-8"></use>
                     </svg>
                 </a>
             </li>
             <li class="customer-list_item">
                 <a class="customer-list_link" href="#">
-                        <svg class="customer-list_icon" width="104" height="56">
+                        <svg class="customer-list_icon" width="110" height="56">
                             <use href="./images/icons.svg#icon-Logo-9"></use>
                         </svg>
                 </a>
             </li>
             <li class="customer-list_item">
                 <a class="customer-list_link" href="#">
-                    <svg class="customer-list_icon" width="104" height="56">
+                    <svg class="customer-list_icon" width="110" height="56">
                             <use href="./images/icons.svg#icon-Logo-10"></use>
                         </svg>
                 </a>
             </a>
             <li class="customer-list_item">
                 <a class="customer-list_link" href="#">
-                    <svg class="customer-list_icon" width="104" height="56">
+                    <svg class="customer-list_icon" width="110" height="56">
                             <use href="./images/icons.svg#icon-group"></use>
                         </svg>
                 </a>
             </li>
             <li class="customer-list_item">
                 <a class="customer-list_link" href="#">
-                    <svg class="customer-list_icon" width="104" height="56">
+                    <svg class="customer-list_icon" width="110" height="56">
                             <use href="./images/icons.svg#icon-Logo-11"></use>
                         </svg>
                 </a>
             </li>
             <li class="customer-list_item">
                 <a class="customer-list_link" href="#">
-                    <svg class="customer-list_icon" width="104" height="56">
+                    <svg class="customer-list_icon" width="110" height="56">
                             <use href="./images/icons.svg#icon-Logo-12"></use>
                         </svg>
                 </a>
@@ -356,7 +356,7 @@
             </div>
 
             <div class="footer-socials">
-                <h4>Social media</h4>
+                <h4 class="footer-socials_name">Social media</h4>
             <ul class="footer-links">
                 <li class="footer-links_item">
                     <a class="footer-link" href="https://instagram.com/">
@@ -393,10 +393,10 @@
         </div>
         <form class="form-footer">
 
-            <h4>Subscribe</h4>
+            <h4 class="subscription">Subscribe</h4>
 
             <div class="form-flex">
-            <label>
+            <label class="form-label">
                 <input 
                 class="form-input" 
                 type="email" 
