--- a/portfolio.html
+++ b/portfolio.html
@@ -325,10 +325,10 @@
 
         <ul class="mobile-menu">
             <li class="mobile-menu_item">
-                <a class="mobile-menu_link active" href="#">Studio</a>
+                <a class="mobile-menu_link" href="./index.html">Studio</a>
             </li>
             <li class="mobile-menu_item">
-                <a class="mobile-menu_link" href="./portfolio.html">Portfolio</a>
+                <a class="mobile-menu_link active" href="#">Portfolio</a>
             </li>
             <li class="mobile-menu_item">
                 <a class="mobile-menu_link" href="#">Contacts</a>
