--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <nav class="navigation">
             <div class="header-nav">
                 <a class="logo header" href="#">
-                    <span class="logo_start">WEB</span>STUDIO
+                    <span class="logo_start">WEB</span><span class="logo-header-end">STUDIO</span>
                 </a>
                 <ul class="nav-links">
                     <li>
@@ -35,11 +35,11 @@
         </nav>
 
         <ul class="contacts">
-            <li>
-                <a class="contacts mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="contacts_item">
+                <a class="contacts_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a class="contacts phone" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            <li class="contacts_item">
+                <a class="contacts_link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
             </li>
         </ul>
 
