--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navigation">
             <div class="header-nav">
                 <a class="logo header" href="#">
-                    <span class="logo_start">WEB</span>STUDIO
+                    <span class="logo_start">WEB</span><span class="logo-header-end">STUDIO</span>
                 </a>
                 <ul class="nav-links">
                     <li>
@@ -35,14 +35,16 @@
             </div>
         </nav>
 
-        <ul class="contacts">
-            <li>
-                <a class="contacts mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="contacts phone" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-            </li>
-        </ul>
+        <address>
+            <ul class="contacts">
+                <li class="contacts_item">
+                    <a class="contacts_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contacts_item">
+                    <a class="contacts_link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
 
         <button class="menu-toggle js-open-menu style-menu" aria-expanded="true" aria-controls="mobile-menu">
             <svg class="menu-icon" width="32" height="22">
@@ -601,7 +603,6 @@
         </ul>
     </div>
 
-    <script defer="" src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
     <script src="./modal.js"></script>
     <script src="./mobile-menu.js"></script>
 </body>
