--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <div class="container-header container">
         <nav class="navigation">
             <div class="header-nav">
-                <a class="logo header" href="#">
+                <a class="logo header" href="./index.html">
                     <span class="logo_start">WEB</span><span class="logo-header-end">STUDIO</span>
                 </a>
                 <ul class="nav-links">
@@ -379,7 +379,6 @@
         </ul>
     </div>
 
-    <script defer="" src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
     <script src="./mobile-menu.js"></script>
 </body>
 </html>
